--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Tourisme</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Santé</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -25,16 +25,16 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #1F3C90" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#1F3C90"></mj-button>
+      <mj-button border="2px solid #2386C8" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#2386c8"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
       <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
       <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#1F3C90"/>
-      <mj-class name="bg0" background-color="#1F3C90"/>
-      <mj-class name="c1" color="#20274F"/>
-      <mj-class name="bg1" background-color="#20274F"/>
+      <mj-class name="c0" color="#2386c8"/>
+      <mj-class name="bg0" background-color="#2386c8"/>
+      <mj-class name="c1" color="#114364"/>
+      <mj-class name="bg1" background-color="#114364"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -46,7 +46,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/x7Dh8V0/logo-ETourisme.png" alt="logo Ecosup Tourisme"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/18LWQj8/logo-ESante.png" alt="logo Ecosup Santé"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -60,10 +60,10 @@
           <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/whPywHFL/tour1.jpg" alt="Formation au CCA"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/Kj1CLhZW/sm2.jpg" alt="travail de secrétariat médical"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/p6d6Kjjj/jpo-TImg21062025.jpg" alt="Préparation des voyages"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/j9t15M2c/jpo-SMImg21062025.jpg" alt="utilisation du clavier pour réaliser le tavail quotidien"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -72,17 +72,15 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px"> 
       <mj-column width="88%">
-        <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;?</mj-text>
-        <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible.</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">le tourisme</span>.</mj-text>
-        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez aux voyages, aux cultures, à l'organisation de séjours ou à l'accueil de visiteurs&nbsp;? Venez découvrir nos formations </mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#1F3C90;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Tourisme (en initial ou en alternance)</mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color: #1F3C90;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable Commercial en Tourisme</mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#1F3C90;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Management Stratégique des Entreprises du Tourisme</mj-text>
+        <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900;">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;?</mj-text>
+        <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">le secrétariat médical</span>.</mj-text>
+        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez au secrétariat médical, à la gestion des dossiers patients, à l'organisation des rendez-vous ou à la coordination des soins&nbsp;? Venez découvrir notre formation</mj-text>
+        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#2386C8;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire Médical(e) (en initial ou en alternance)</mj-text>
         <mj-text padding="10px" padding-top="0" mj-class="T16-400 cT0">à l'occasion de notre dernière <span style="font-weight:700;color:#1a1a1a;">Journée Portes Ouvertes</span> de l'année.</mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT1"><img align="left" width="60px" src="https://i.ibb.co/yBKtNfQG/cal-Tou21062025.png" alt=""/>
-          <div style="font-weight:700;padding-left:70px;color:#1F3C90;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
-          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
+        <mj-text padding="5px 10px" mj-class="T16-400 cT1"><img align="left" width="60px" src="https://i.ibb.co/JwhbXJrs/cal-SM21062025.png" alt=""/>
+          <div style="font-weight:700;padding-left:70px;color:#2386C8;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
+          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
         </mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. <span style="font-weight:700;color:#1a1a1a;">Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine</span>.</mj-text>
@@ -94,10 +92,10 @@
         <mj-column width="80%" vertical-align="bottom">   
           <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Clément Duhamel</mj-text>
           <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Tourisme</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Immobilier</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique Tourisme"/>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique immobilier"/>
         </mj-column>
       </mj-group>
     </mj-section>
@@ -124,69 +122,42 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-tourisme.fr" target="_blank">www.ecosup-tourisme.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-sante.fr/secretaire-medicale-2" target="_blank">www.ecosup-sante.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/9kndN5PR/icon-Tour062025.png" alt="icon Tourisme : terre, valise et avion"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
+      </mj-column>
+      <mj-column width="80%">   
+        <mj-spacer height="20px"></mj-spacer>
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">8 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="0">
+      <mj-column>
+        <mj-spacer height="10px"></mj-spacer>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="20px" background-color="#e6e6e6">
+      <mj-column width="20%">
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#1F3C90;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Tourisme</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
         <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
+           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">préparation au CCA</span>, Cabin Crew Attestation,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/9kndN5PR/icon-Tour062025.png" alt="icon Tourisme : terre, valise et avion"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#1F3C90;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable commercial en tourisme</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Travel Week</span>, semaine immersive en mobilité internationale,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/9kndN5PR/icon-Tour062025.png" alt="Icon Tourisme : terre, valise et avion"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#1F3C90;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Management stratégique des entreprises du tourisme</mj-text>
-        <mj-text padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+3,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Double certification internationale</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
